Update feature MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="d_c_o">D C O</string>
     <string name="saya_menyetujui_atas_syarat_ketentuan"><![CDATA[Saya Menyetujui atas Syarat & Ketentuan !!]]></string>
     <string name="s_u_n_l_i_f_e">S U N L I F E</string>
+    <string name="logo_aplikasi">Logo Aplikasi</string>
 </resources>
